--- a/faq/index.css
+++ b/faq/index.css
@@ -47,3 +47,13 @@ margin-top: 10rem;
   display: flex;
   flex-direction: column;
 }
+
+.answer {
+  display: block;
+  margin-top: 10px;
+  transition: max-height 0.3s ease-out;
+}
+
+.hidden {
+  display: none;
+}
