--- a/faq/index.css
+++ b/faq/index.css
@@ -3,6 +3,7 @@
 :root {
   --background_color: hsl(0, 0%, 100%);
   --heading_color: hsl(292, 42%, 14%);
+  --hover_color:hsl(292, 49%, 38%);
   --text_color: hsl(292, 16%, 49%);
 }
 
@@ -30,6 +31,11 @@ h4 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+h4:hover {
+  cursor: pointer;
+  color: var(--hover_color);
 }
 
 p {
